Fixed ap name & stk_hld home ap dropdown

--- a/dipp/templates/dipp/add_target.html
+++ b/dipp/templates/dipp/add_target.html
@@ -17,6 +17,7 @@
       <div class="form-group" >
           <label>Department Name</label>
           <select class="form-control" name="department" id="dept" >
+            <option value="" class="form-control"></option>
             {% for department in d %}
             <option value="{{department.dept_loginid}}" class="form-control">department: {{department.dept_name}}</option>
             {% endfor %}
