--- a/stk_hld/templates/stk_hld/base.html
+++ b/stk_hld/templates/stk_hld/base.html
@@ -125,12 +125,12 @@
           <span>Show Ranking</span>
         </a>
       </li>
-      <!-- <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'feedback_form' %}" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
           <span>Feedback for dept</span>
         </a>
-      </li> -->
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'view_dept_summary' %}" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
